# reth

./: .op-reth-base-tag  Cargo.toml  Cross.toml  Makefile  justfile  rustc-ice-2026-04-09T10_55_24-74658.txt  rustc-ice-2026-04-09T10_55_42-76084.txt  rustc-ice-2026-04-09T11_12_18-23188.txt  rustc-ice-2026-04-09T11_12_20-23213.txt  rustc-ice-2026-04-09T11_12_39-23693.txt  rustc-ice-2026-04-09T11_12_39-23694.txt  rustc-ice-2026-04-09T11_13_18-25291.txt  rustc-ice-2026-04-09T12_51_51-19973.txt  rustc-ice-2026-04-09T12_51_51-19977.txt  rustc-ice-2026-04-09T12_51_51-19980.txt  rustc-ice-2026-04-09T13_17_11-63565.txt  rustc-ice-2026-04-09T13_17_11-63568.txt  rustc-ice-2026-04-09T13_17_11-63569.txt  rustc-ice-2026-04-09T13_17_11-63570.txt  rustc-ice-2026-04-09T13_17_11-63573.txt  rustc-ice-2026-04-09T13_32_29-83820.txt  rustc-ice-2026-04-09T13_32_29-83824.txt  rustc-ice-2026-04-09T13_32_29-83826.txt  rustc-ice-2026-04-09T13_32_29-83830.txt  rustc-ice-2026-04-09T13_32_29-83836.txt  rustc-ice-2026-04-09T13_52_10-56456.txt  rustc-ice-2026-04-09T13_52_10-56457.txt  rustc-ice-2026-04-09T13_52_10-56459.txt  rustc-ice-2026-04-20T13_15_38-44490.txt  rustc-ice-2026-04-20T13_15_39-44505.txt  rustc-ice-2026-04-20T13_15_39-44523.txt  rustc-ice-2026-04-20T13_17_37-46030.txt  rustc-ice-2026-04-20T13_17_37-46051.txt  rustc-ice-2026-04-20T13_17_37-46063.txt  rustc-ice-2026-04-21T09_47_18-93535.txt  rustc-ice-2026-04-29T01_24_38-33403.txt  rustc-ice-2026-04-29T03_13_51-55947.txt  rustc-ice-2026-04-29T03_13_51-55951.txt  rustc-ice-2026-04-29T07_04_09-230.txt  rustc-ice-2026-05-06T01_57_06-65172.txt  (+12 more)
.cargo/: config.toml
.depot/workflows/: ci.yml  release.yml  sync-upstream.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  migrate-secrets-to-depot-ci-1781164163794.yml  release.yml  sync-upstream.yml  update-op-reth-tempo.yml  update-op-reth.yml
crates/optimism/chainspec/res/: superchain_registry_commit
crates/optimism/txpool/src/: transaction.rs
docs/: op-reth-auto-bump-conflicts.md
docs/design/: update-op-reth-enhancement.md
docs/runbooks/: op-reth-auto-bump.md
docs/spark/: 2026-06-05-op-reth-auto-bump-design.md
mantle-reth/crates/chainspec/: Cargo.toml
mantle-reth/crates/chainspec/res/genesis/: mantle.json  mantle_sepolia.json
mantle-reth/crates/chainspec/src/: lib.rs  mantle.rs  mantle_mainnet.rs  mantle_sepolia.rs
mantle-reth/crates/cli/: Cargo.toml  build.rs
mantle-reth/crates/cli/src/: chainspec.rs  lib.rs  main.rs  node.rs  txpool.rs  version.rs
mantle-reth/crates/eth-api/: Cargo.toml
mantle-reth/crates/eth-api/src/: debug.rs  lib.rs
mantle-reth/crates/integration-tests/: Cargo.toml
mantle-reth/crates/integration-tests/examples/: gen_replay_fixture.rs
mantle-reth/crates/integration-tests/src/: lib.rs
mantle-reth/crates/integration-tests/tests/: gas_estimation.rs  helpers.rs  main.rs  replay.rs  token_ratio_midblock.rs  txpool.rs
mantle-reth/crates/integration-tests/tests/assets/: genesis.json
mantle-reth/crates/integration-tests/tests/fixtures/: arsia_create.json  arsia_deposit.json  arsia_eip1559.json  arsia_revert.json  arsia_single.json  limb_transfer.json  skadi_swap.json
mantle-reth/crates/rpc-ext/: Cargo.toml
mantle-reth/crates/rpc-ext/src/: lib.rs
op-reth/: Cross.toml  DockerfileOp  DockerfileOp.cross
op-reth/crates/chainspec/: Cargo.toml
op-reth/crates/chainspec/src/: lib.rs
op-reth/crates/consensus/: Cargo.toml
op-reth/crates/consensus/src/: lib.rs  proof.rs
op-reth/crates/evm/src/: build.rs  execute.rs  l1.rs  lib.rs
op-reth/crates/node/src/: engine.rs
op-reth/crates/primitives/proptest-regressions/transaction/: signed.txt
op-reth/crates/primitives/src/transaction/: signed.rs
op-reth/crates/rpc/: Cargo.toml
op-reth/crates/rpc/src/: engine.rs  error.rs  sequencer.rs
op-reth/crates/rpc/src/eth/: call.rs  receipt.rs
op-reth/crates/txpool/src/: transaction.rs  validator.rs
patches/reth-trie-common/: Cargo.toml
patches/reth-trie-common/src/: proofs.rs
testdata/micro/db/: BlockBodyIndices.json  BlockOmmers.json  CanonicalHeaders.json  HeaderNumbers.json  Headers.json  PlainAccountState.json  PlainStorageState.json  TransactionHashNumbers.json  Transactions.json
testing/ef-tests/ethereum-tests/src/BlockchainTestsFiller/InvalidBlocks/bc4895-withdrawals/: withdrawalsIndexBoundsFiller.json
testing/ef-tests/ethereum-tests/src/GeneralStateTestsFiller/stExpectSection/: result_mergeEnvConvertionFiller.json
