# Mantle op-reth Workspace
#
# Structure:
#   op-reth/       — OP Stack execution layer (from ethereum-optimism/optimism, op-reth/v2.2.1)
#   mantle-reth/   — Mantle trait override layer (custom)
#   patches/       — Minimal reth core patches (via [patch])
#
# Dependency strategy:
#   reth crates    → paradigmxyz/reth rev 88505c7f (= v2.2.0, same as upstream op-reth pins)
#   revm/op-revm   → mantle-xyz/revm branch mantle-elysium (Mantle fee model patches)
#   revm-inspectors → mantle-xyz/revm-inspectors branch mantle-elysium
#   alloy-evm      → crates.io 0.34.0 (temporary, later switch to mantle-xyz/evm)
#   alloy-op-evm   → crates.io 0.31.0 (temporary, later switch to mantle-xyz/evm)
#   op-alloy       → crates.io 0.24.0 (temporary, later switch to mantle-xyz/op-alloy)
#   alloy base     → crates.io 2.0.4

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.94"
authors = ["Mantle Core Contributors"]
homepage = "https://github.com/mantle-xyz/reth"
repository = "https://github.com/mantle-xyz/reth"
exclude = ["**/target"]

[workspace]
resolver = "2"
members = [
  # Op-Reth (from upstream ethereum-optimism/optimism, op-reth/v2.2.1)
  "op-reth/bin/",
  "op-reth/crates/chainspec/",
  "op-reth/crates/cli/",
  "op-reth/crates/consensus/",
  "op-reth/crates/evm/",
  "op-reth/crates/flashblocks/",
  "op-reth/crates/hardforks/",
  "op-reth/crates/node/",
  "op-reth/crates/payload/",
  "op-reth/crates/primitives/",
  "op-reth/crates/reth/",
  "op-reth/crates/rpc/",
  "op-reth/crates/storage/",
  "op-reth/crates/exex/",
  "op-reth/crates/trie/",
  "op-reth/crates/txpool/",

  # Mantle-Reth (trait override layer, new)
  # Uncomment as crates are created:
  # "mantle-reth/crates/eth-api/",
  # "mantle-reth/crates/chainspec/",
  # "mantle-reth/crates/consensus/",
  # "mantle-reth/crates/validator/",
  # "mantle-reth/crates/rpc-ext/",
  # "mantle-reth/crates/cli/",
  # "mantle-reth/crates/exex/",
  # "mantle-reth/crates/hardforks/",
]
default-members = [
  "op-reth/bin/",
]

# ==================== WORKSPACE LINTS ====================
[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = { level = "deny", priority = -1 }
unnameable-types = "warn"
rust-2024-incompatible-pat = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "warn"
doc_markdown = "warn"
use-self = "warn"
# Allow patterns common in Mantle code
cognitive_complexity = "allow"
result_large_err = "allow"
too_long_first_doc_paragraph = "allow"

# ==================== PROFILES ====================
[profile.dev]
opt-level = 1
overflow-checks = false
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

# ==================== WORKSPACE DEPENDENCIES ====================
[workspace.dependencies]

# ==================== OP-RETH INTERNAL CRATES ====================
op-reth = { path = "op-reth/bin/" }
reth-optimism-chainspec = { path = "op-reth/crates/chainspec/", default-features = false }
reth-optimism-cli = { path = "op-reth/crates/cli/", default-features = false }
reth-optimism-consensus = { path = "op-reth/crates/consensus/", default-features = false }
reth-optimism-evm = { path = "op-reth/crates/evm/", default-features = false }
reth-optimism-flashblocks = { path = "op-reth/crates/flashblocks/" }
reth-optimism-forks = { path = "op-reth/crates/hardforks/", default-features = false }
reth-optimism-node = { path = "op-reth/crates/node/" }
reth-optimism-payload-builder = { path = "op-reth/crates/payload/" }
reth-optimism-primitives = { path = "op-reth/crates/primitives/", default-features = false }
reth-op = { path = "op-reth/crates/reth/", default-features = false }
reth-optimism-rpc = { path = "op-reth/crates/rpc/" }
reth-optimism-storage = { path = "op-reth/crates/storage/" }
reth-optimism-exex = { path = "op-reth/crates/exex/" }
reth-optimism-trie = { path = "op-reth/crates/trie/" }
reth-optimism-txpool = { path = "op-reth/crates/txpool/" }

# ==================== RETH CRATES (crates.io published) ====================
reth-codecs = { version = "0.3.1", default-features = false, features = ["alloy"] }
reth-codecs-derive = "0.3.1"
reth-primitives-traits = { version = "0.3.1", default-features = false }
reth-rpc-traits = { version = "0.3.1", default-features = false }
reth-zstd-compressors = { version = "0.3.1", default-features = false }

# ==================== RETH CRATES (git @ v2.2.0, pinned by upstream op-reth) ====================
reth = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-cli = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-downloaders = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-fs-util = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-network = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-node-events = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-payload-builder-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-payload-util = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-prune = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-prune-types = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-stages = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-stages-types = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-static-file = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-static-file-types = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4", default-features = false }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", rev = "88505c7fcbfdebfd3b56d88c86b62e950043c6c4" }

# ==================== REVM (Mantle fork: mantle-elysium branch) ====================
# TODO: Switch to tag once mantle-elysium is tagged (e.g., v107-mantle-elysium.1)
revm = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }
revm-bytecode = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }
revm-database = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }
revm-state = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }
revm-primitives = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }
revm-interpreter = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }
revm-database-interface = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }
revm-inspector = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }
revm-context = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }
revm-context-interface = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }
op-revm = { git = "https://github.com/mantle-xyz/revm", branch = "mantle-elysium", default-features = false }

# ==================== REVM-INSPECTORS (Mantle fork: mantle-elysium branch) ====================
# TODO: Switch to tag once mantle-elysium is tagged
revm-inspectors = { git = "https://github.com/mantle-xyz/revm-inspectors", branch = "mantle-elysium" }

# ==================== ALLOY-EVM (temporary: crates.io, later switch to mantle-xyz/evm) ====================
# TODO: Switch to mantle-xyz/evm once upgraded
alloy-evm = { version = "0.34.0", default-features = false }

# ==================== ALLOY-OP-EVM / ALLOY-OP-HARDFORKS (temporary: crates.io) ====================
# TODO: Switch alloy-op-evm to mantle-xyz/evm once upgraded
alloy-op-evm = { version = "0.31.0", default-features = false }
alloy-op-hardforks = { version = "0.4.7", default-features = false }

# ==================== OP-ALLOY (temporary: crates.io, later switch to mantle-xyz/op-alloy) ====================
# TODO: Switch to mantle-xyz/op-alloy once upgraded to 0.24.0
op-alloy-consensus = { version = "0.24.0", default-features = false }
op-alloy-network = { version = "0.24.0", default-features = false }
op-alloy-provider = { version = "0.24.0", default-features = false }
op-alloy-rpc-types = { version = "0.24.0", default-features = false }
op-alloy-rpc-types-engine = { version = "0.24.0", default-features = false }
op-alloy-rpc-jsonrpsee = { version = "0.24.0", default-features = false }
op-alloy-flz = { version = "0.13.1", default-features = false }

# ==================== ALLOY ====================
alloy-chains = { version = "0.2.33", default-features = false }
alloy-dyn-abi = "1.5.6"
alloy-eip2124 = { version = "0.2.0", default-features = false }
alloy-eip7928 = { version = "0.3.4", default-features = false }
alloy-primitives = { version = "1.5.6", default-features = false, features = ["map-foldhash"] }
alloy-rlp = { version = "0.3.13", default-features = false, features = ["core-net"] }
alloy-sol-macro = "1.5.6"
alloy-sol-types = { version = "1.5.6", default-features = false }
alloy-trie = { version = "0.9.4", default-features = false }
alloy-hardforks = { version = "0.4.7", default-features = false }
alloy-consensus = { version = "2.0.4", default-features = false }
alloy-contract = { version = "2.0.4", default-features = false }
alloy-eips = { version = "2.0.4", default-features = false }
alloy-genesis = { version = "2.0.4", default-features = false }
alloy-json-rpc = { version = "2.0.4", default-features = false }
alloy-network = { version = "2.0.4", default-features = false }
alloy-network-primitives = { version = "2.0.4", default-features = false }
alloy-node-bindings = { version = "2.0.4", default-features = false }
alloy-provider = { version = "2.0.4", features = ["reqwest", "debug-api"], default-features = false }
alloy-pubsub = { version = "2.0.4", default-features = false }
alloy-rpc-client = { version = "2.0.4", default-features = false }
alloy-rpc-types = { version = "2.0.4", features = ["eth"], default-features = false }
alloy-rpc-types-admin = { version = "2.0.4", default-features = false }
alloy-rpc-types-anvil = { version = "2.0.4", default-features = false }
alloy-rpc-types-beacon = { version = "2.0.4", default-features = false }
alloy-rpc-types-debug = { version = "2.0.4", default-features = false }
alloy-rpc-types-engine = { version = "2.0.4", default-features = false }
alloy-rpc-types-eth = { version = "2.0.4", default-features = false }
alloy-rpc-types-mev = { version = "2.0.4", default-features = false }
alloy-rpc-types-trace = { version = "2.0.4", default-features = false }
alloy-rpc-types-txpool = { version = "2.0.4", default-features = false }
alloy-serde = { version = "2.0.4", default-features = false }
alloy-signer = { version = "2.0.4", default-features = false }
alloy-signer-local = { version = "2.0.4", default-features = false }
alloy-transport = "2.0.4"
alloy-transport-http = { version = "2.0.4", features = ["reqwest-rustls-tls"], default-features = false }
alloy-transport-ipc = { version = "2.0.4", default-features = false }
alloy-transport-ws = { version = "2.0.4", default-features = false }

# ==================== ASYNC ====================
async-channel = "2.5"
async-stream = "0.3.6"
async-trait = "0.1.89"
futures = "0.3.31"
futures-core = "0.3"
futures-util = { version = "0.3.31", default-features = false }
hyper = "1.8"
hyper-util = "0.1.20"
pin-project = "1.1.10"
tower = "0.5.3"
tower-http = "0.6"

# ==================== TOKIO ====================
tokio = { version = "1.49.0", default-features = false }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["codec"] }

# ==================== RPC ====================
jsonrpsee = { version = "0.26.0", features = ["jsonrpsee-core", "client-core", "server-core", "macros"] }
jsonrpsee-core = "0.26.0"
jsonrpsee-server = "0.26.0"
jsonrpsee-http-client = "0.26.0"
jsonrpsee-types = "0.26.0"

# ==================== CRYPTO ====================
c-kzg = { version = "2.1.5", default-features = false }
enr = { version = "0.13", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10.9", default-features = false }
secp256k1 = { version = "0.31.1", default-features = false }

# ==================== SERIALIZATION ====================
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
serde_repr = "0.1.20"
serde_with = { version = "3.16", default-features = false, features = ["macros"] }
toml = { version = "0.9.12", default-features = false }

# ==================== METRICS ====================
metrics = { version = "0.24.3", default-features = false }
metrics-derive = "0.1"
metrics-exporter-prometheus = { version = "0.18.1", default-features = false }
metrics-process = "2.4.3"
metrics-util = { version = "0.20.1", default-features = false }

# ==================== TRACING ====================
tracing = { version = "0.1.44", default-features = false }
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", default-features = false }

# ==================== TESTING ====================
arbitrary = { version = "1.4.2", features = ["derive"] }
assert_matches = "1.5.0"
proptest = "1.10.0"
proptest-derive = "0.7"
proptest-arbitrary-interop = "0.1.0"
rstest = "0.26.1"
similar-asserts = { version = "1.7.0", features = ["serde"] }
tempfile = "3.24.0"
serial_test = "3"
test-fuzz = "7.2.5"

# ==================== MISC ====================
auto_impl = "1.3.0"
bytes = { version = "1.11.1", default-features = false }
cfg-if = "1.0.4"
clap = { version = "4", features = ["derive"] }
derive_more = { version = "2.0", default-features = false }
eyre = "0.6"
itertools = "0.15"
once_cell = "1.21"
parking_lot = "0.12"
rand = "0.9.1"
rayon = "1.10.0"
schnellru = "0.2"
strum = { version = "0.27", features = ["derive"] }
thiserror = { version = "2", default-features = false }
url = "2.5"

# ==================== [patch] — reth core minimal patches ====================
# Uncomment when patches/ crates are populated:
# [patch."https://github.com/paradigmxyz/reth"]
# reth-trie-common = { path = "patches/reth-trie-common" }
# reth-rpc = { path = "patches/reth-rpc" }
# reth-transaction-pool = { path = "patches/reth-transaction-pool" }
